Change DB name to lowecase

--- a/cfn/neptune-ontology-db.yml
+++ b/cfn/neptune-ontology-db.yml
@@ -278,7 +278,7 @@ Resources:
   NeptuneDBInstance:
     Type: 'AWS::Neptune::DBInstance'
     Properties:
-      DBClusterIdentifier: !Ref NeptuneDBCluster
+      DBClusterIdentifier: !Ref neptunedbcluster
       DBInstanceClass: !Ref DbInstanceType
       DBParameterGroupName: !Ref NeptuneDBParameterGroup
       Tags:
