--- a/cfn/neptune-ontology-db.yml
+++ b/cfn/neptune-ontology-db.yml
@@ -81,7 +81,7 @@ Resources:
           - !Ref Subnet3
       Tags:
         - Key: Name
-          Value: !Sub 'Neptune-Subnet-${Env}'
+          Value: !Sub 'Neptune-${Env}'
         - Key: StackId
           Value: !Sub '${AWS::StackId}'
         - Key: Stack
@@ -213,12 +213,12 @@ Resources:
     Type: 'AWS::Neptune::DBClusterParameterGroup'
     Properties:
       Family: neptune1
-      Description: neptune-db-cluster-parameter-group
+      Description: test-cfn-neptune-db-cluster-parameter-group-description
       Parameters:
         neptune_enable_audit_log: 1
       Tags:
         - Key: Name
-          Value: !Sub 'Neptune-ClusterPG-${Env}'
+          Value: !Sub 'Neptune-${Env}'
         - Key: StackId
           Value: !Sub '${AWS::StackName}'
         - Key: Stack
@@ -229,12 +229,12 @@ Resources:
     Type: 'AWS::Neptune::DBParameterGroup'
     Properties:
       Family: neptune1
-      Description: cfn-neptune-db-parameter-group
+      Description: test-cfn-neptune-db-parameter-group-description
       Parameters:
         neptune_query_timeout: !Ref NeptuneQueryTimeout
       Tags:
         - Key: Name
-          Value: !Sub 'Neptune-PG-${Env}'
+          Value: !Sub 'Neptune-${Env}'
         - Key: StackId
           Value: !Sub '${AWS::StackId}'
         - Key: Stack
@@ -265,7 +265,7 @@ Resources:
         - audit
       Tags:
         - Key: Name
-          Value: !Sub 'Neptune-Clus-${Env}'
+          Value: !Sub 'Neptune-${Env}'
         - Key: StackId
           Value: !Sub '${AWS::StackId}'
         - Key: Stack
@@ -278,12 +278,12 @@ Resources:
   NeptuneDBInstance:
     Type: 'AWS::Neptune::DBInstance'
     Properties:
-      DBClusterIdentifier: !Ref neptunedbcluster
+      DBClusterIdentifier: !Ref NeptuneDBCluster
       DBInstanceClass: !Ref DbInstanceType
       DBParameterGroupName: !Ref NeptuneDBParameterGroup
       Tags:
         - Key: Name
-          Value: !Sub 'NeptuneDB-Inst-${Env}'
+          Value: !Sub 'Neptune-${Env}'
         - Key: StackId
           Value: !Sub '${AWS::StackId}'
         - Key: Stack
