Fix Neptune Notebook Instance Lifecycle Config

--- a/cfn/neptune-ontology-workbench.yml
+++ b/cfn/neptune-ontology-workbench.yml
@@ -130,10 +130,9 @@ Resources:
             'Fn::Join':
               - ";"
               - - sudo touch /etc/profile.d/jupyter-env.sh
-                - sudo apt-get install upstart-sysv
-
                 - !Sub sudo echo "export S3_WORKING_BUCKET=${BulkLoadS3BucketName} " >> /etc/profile.d/jupyter-env.sh
-                - sudo initctl restart jupyter-server --no-wait           
+#                - sudo initctl restart jupyter-server --no-wait
+                - systemctl restart jupyter-server
       OnStart:
         - Content: !Base64 
             'Fn::Join':
